✨ Skill-User relation + CRUD completed